@@ -37,7 +37,6 @@ private:
   unsigned int          runNumber_;
   unsigned int          evtNumber_;
   unsigned int          fuResourceId_;
-
   
 };
 
