@@ -1,3 +1,8 @@
+2007-03-21  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-04-00
+	* based on EventFilter/ShmBuffer V00-03-00
+
 2007-03-11  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-03-00
